package main;

public class PressePapier {
    private String contenu;

    public PressePapier() {
        this.contenu = "";
    }

    public void setContenu(String contenu) {
        this.contenu = contenu;
    }

    public String getContenu() {
        return contenu;
    }
}
